--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.10",
     "@types/react-dom": "18.0.9",
+    "@types/react-syntax-highlighter": "15.5.5",
     "@types/validator": "13.7.10",
-    "ace-builds": "1.13.1",
+    "pretty": "2.0.0",
     "react": "18.0.0",
-    "react-ace": "10.1.0",
     "react-dom": "18.0.0",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "15.5.0",
     "validator": "13.7.0"
   },
   "devDependencies": {
